// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test AutoFocus should render correctly when height is less than 0 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      Focus Adjustment
    </label>
    <button
      aria-checked="false"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
</div>
`;

exports[`test AutoFocus should render correctly when repeat is larger than 1 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      Focus Adjustment
    </label>
    <button
      aria-checked="true"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash ant-switch-checked"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div>
    MockNumberBlock
    <p>
      configKey: 
      height
    </p>
    <p>
      id: 
      height
    </p>
    <p>
      max: 
      20
    </p>
    <p>
      min: 
      0.01
    </p>
    <p>
      precision: 
      2
    </p>
    <p>
      step: 
      0.01
    </p>
    <p>
      title: 
      Object Height
    </p>
    <p>
      unit: 
      mm
    </p>
  </div>
  <div>
    MockNumberBlock
    <p>
      configKey: 
      zStep
    </p>
    <p>
      id: 
      zStep
    </p>
    <p>
      max: 
      20
    </p>
    <p>
      min: 
      0
    </p>
    <p>
      precision: 
      2
    </p>
    <p>
      step: 
      0.01
    </p>
    <p>
      title: 
      Z Step
    </p>
    <p>
      unit: 
      mm
    </p>
  </div>
</div>
`;

exports[`test AutoFocus should render correctly when repeat is less than 1 1`] = `
<div>
  <div
    class="panel switch"
  >
    <label
      class="title"
      for="auto-focus"
    >
      Focus Adjustment
    </label>
    <button
      aria-checked="true"
      class="ant-switch ant-switch-small switch css-dev-only-do-not-override-hash ant-switch-checked"
      id="auto-focus"
      role="switch"
      type="button"
    >
      <div
        class="ant-switch-handle"
      />
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        />
        <span
          class="ant-switch-inner-unchecked"
        />
      </span>
    </button>
  </div>
  <div>
    MockNumberBlock
    <p>
      configKey: 
      height
    </p>
    <p>
      id: 
      height
    </p>
    <p>
      max: 
      20
    </p>
    <p>
      min: 
      0.01
    </p>
    <p>
      precision: 
      2
    </p>
    <p>
      step: 
      0.01
    </p>
    <p>
      title: 
      Object Height
    </p>
    <p>
      unit: 
      mm
    </p>
  </div>
</div>
`;
